# chainlit-bootstrap

./: .gitignore  Dockerfile  Makefile  README.md  app.py  chainlit.md  chainlit.toml  docker-compose.yml  pyproject.toml
.cursor/commands/: commit.md  pr.md
chainlit_bootstrap/: __init__.py  auth.py  handlers.py  llm.py  pii.py
docs/: requirements.md  technical-design.md
learn_chainlit/: auth.py  handlers.py  pii.py
scripts/: download-spacy-model.py  init_db.py  install-spacy-model.sh  one_time_setup.sh
